// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`BookCitation renders  component with a mock espace record 1`] = `
<div>
  <div
    class="citationContent citationBook"
  >
    <span
      class="citationAuthors"
    >
      <span
        class="citationAuthor"
        data-testid="rek-author-0"
      >
        Teesson, Maree
      </span>
      , 
      <span
        class="citationAuthor"
        data-testid="rek-author-1"
      >
        Hall, Wayne
      </span>
      , 
      <span
        class="citationAuthor"
        data-testid="rek-author-2"
      >
        Proudfoot, Heather
      </span>
      , 
       and 
      <span
        class="citationAuthor"
        data-testid="rek-author-3"
      >
        Degenhardt, Louisa
      </span>
       
    </span>
    <span
      class="citationDate"
    >
      (
      2011
      ).
    </span>
    <span
      class="citationTitle"
    >
       
      Addictions
      .
    </span>
    <span
      class="citationEdition"
    >
       
      2nd
       ed.
    </span>
    <span
      class="citationPlaceOfPublication"
    >
       
      Hove, United Kingdom
      :
    </span>
    <span
      class="citationPublisher"
    >
       
      Psychology Press
      .
    </span>
    <span
      class="citationDOI empty"
    />
  </div>
</div>
`;

exports[`BookCitation renders  component with an empty doi view  1`] = `
<div>
  <div
    class="citationContent citationBook"
  >
    <span
      class="citationEditors"
    >
      <span
        class="citationAuthor"
        data-testid="rek-contributor-0"
      >
        Smith, A
      </span>
      , 
      <span
        class="citationAuthor"
        data-testid="rek-contributor-1"
      >
        Smith, B
      </span>
      , 
       and 
      <span
        class="citationAuthor"
        data-testid="rek-contributor-2"
      >
        Smith, C
      </span>
       ed.
    </span>
    <span
      class="citationDate"
    >
      (
      2011
      ).
    </span>
    <span
      class="citationTitle"
    >
       
      Addictions
      .
    </span>
    <span
      class="citationEdition"
    >
       
      2nd
       ed.
    </span>
    <span
      class="citationSeries"
    >
       
      Clinical Psychology: A Modular Course
      ,
    </span>
    <span
      class="citationPlaceOfPublication"
    >
       
      Hove, United Kingdom
      :
    </span>
    <span
      class="citationPublisher"
    >
       
      Psychology Press
      .
    </span>
    <span
      class="citationDOI empty"
    />
  </div>
</div>
`;

exports[`BookCitation renders  component with empty publication 1`] = `
<div>
  <div
    class="citationContent citationBook"
  >
    <span
      class="citationAuthors empty"
    />
    <span
      class="citationDate empty"
    />
    <span
      class="citationTitle empty"
    />
    <span
      class="citationEdition empty"
    />
    <span
      class="citationPlaceOfPublication empty"
    />
    <span
      class="citationPublisher empty"
    />
    <span
      class="citationDOI empty"
    />
  </div>
</div>
`;

exports[`BookCitation renders  should render citation for edited book record 1`] = `
<div>
  <div
    class="citationContent citationBook"
  >
    <span
      class="citationEditors"
    >
      <span
        class="citationAuthor"
        data-testid="rek-contributor-0"
      >
        Smith, A
      </span>
      , 
      <span
        class="citationAuthor"
        data-testid="rek-contributor-1"
      >
        Smith, B
      </span>
      , 
       and 
      <span
        class="citationAuthor"
        data-testid="rek-contributor-2"
      >
        Smith, C
      </span>
       ed.
    </span>
    <span
      class="citationDate"
    >
      (
      2011
      ).
    </span>
    <span
      class="citationTitle"
    >
       
      Addictions
      .
    </span>
    <span
      class="citationEdition"
    >
       
      2nd
       ed.
    </span>
    <span
      class="citationSeries"
    >
       
      Clinical Psychology: A Modular Course
      ,
    </span>
    <span
      class="citationPlaceOfPublication"
    >
       
      Hove, United Kingdom
      :
    </span>
    <span
      class="citationPublisher"
    >
       
      Psychology Press
      .
    </span>
    <span
      class="citationDOI empty"
    />
  </div>
</div>
`;
